--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "watch": "tsc --skipLibCheck --watch",
     "dev": "nodemon --quiet --watch dist --exec 'clear;node dist/index.js'",
+    "lint": "eslint --ext .ts .",
+    "lint:fix": "yarn lint --fix",
+    "format": "prettier --write --loglevel silent './**/*.{json,js}'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,7 +16,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^14.6.4",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
+    "eslint": "^7.8.1",
     "nodemon": "^2.0.4",
     "typescript": "^4.0.2"
+  },
+  "dependencies": {
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.1"
   }
 }
