--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint --ext .ts .",
     "lint:fix": "yarn lint --fix",
     "format": "prettier --write --loglevel silent './**/*.{json,js}'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "husky": {
     "hooks": {
@@ -24,11 +24,18 @@
   "author": "lee",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/jest": "^26.0.13",
     "@types/node": "^14.6.4",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
+    "babel-jest": "^26.3.0",
     "eslint": "^7.8.1",
+    "eslint-plugin-jest": "^23.20.0",
     "husky": "^4.2.5",
+    "jest": "^26.4.2",
     "lint-staged": "^10.3.0",
     "nodemon": "^2.0.4",
     "typescript": "^4.0.2"
