--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     "resolveJsonModule": true,
     "baseUrl": "."
   },
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "./**/*__tests__"],
   "include": ["./src/**/*.tsx", "./src/**/*.ts"]
 }
